fixed profile image to stretch full-screen

--- a/style/index.css
+++ b/style/index.css
@@ -88,11 +88,10 @@ header{
     justify-content: center;
     width: 100%;
 }
-.profileimg {
+.profile-img {
     width: 100%;
-    background-size: cover;
     background-position: center;
-    background-repeat: no-repeat; 
+    height: 200px;
 }
 h2{
     text-align: center;
@@ -106,6 +105,7 @@ a {
     font-size: 3em;
     color: white;
     letter-spacing: .4rem;
+    margin-right: 2%;
 }
 .projects {
     display: flex;
